--- a/api.yaml
+++ b/api.yaml
@@ -4,7 +4,7 @@ info:
   title: OnTime API
   description: "API REST para la aplicación OnTime, un clon de Taiga. Esta API proporciona acceso a todas las funcionalidades implementadas en la aplicación web."
 servers:
-  - url: 'http://3.233.217.10:8080/api/v1'
+  - url: 'http://44.211.31.44:8080/api/v1'
     description: 'Servidor de desarrollo local'
 paths:
   /issues:
@@ -236,7 +236,7 @@ paths:
                   type: string
                   format: binary
               required:
-                - attachment
+              - attachment
       responses:
         201:
           description: Archivo adjunto creado
@@ -659,7 +659,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /users/{id}/comments:
+  /users/{id}/comments: # Esta es la definición que se conserva (la primera y correcta)
     get:
       tags:
       - users
@@ -687,24 +687,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-        required: true
-        schema:
-          type: integer
-      responses:
-        200:
-          description: Lista de issues creados
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Issue'
-        404:
-          description: Usuario no encontrado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+  # El BLOQUE DUPLICADO de /users/{id}/comments que estaba aquí HA SIDO ELIMINADO.
   /users/{id}/profile_pic_edit:
     put:
       tags:
@@ -729,7 +712,7 @@ paths:
                   format: binary
                   description: Imagen para el avatar del usuario
               required:
-                - avatar
+              - avatar
       responses:
         200:
           description: Foto de perfil actualizada
@@ -777,7 +760,7 @@ paths:
                   type: string
                   description: Nueva biografu00eda del usuario
               required:
-                - bio
+              - bio
       responses:
         200:
           description: Biografu00eda actualizada
