--- a/render.yaml
+++ b/render.yaml
@@ -21,3 +21,15 @@ services:
         sync: false
       - key: WEB_CONCURRENCY
         value: 2 # sensible default
+      - key: AWS_ACCESS_KEY_ID
+        sync: false
+      - key: AWS_SECRET_ACCESS_KEY
+        sync: false
+      - key: AWS_SESSION_TOKEN
+        sync: false
+      - key: GITHUB_APP_ID
+        sync: false
+      - key: GITHUB_APP_SECRET
+        sync: false
+      - key: GITHUB_CALLBACK_URL
+        sync: false
