--- a/api.yaml
+++ b/api.yaml
@@ -1,11 +1,11 @@
 openapi: 3.0.2
 info:
   version: 1.0.0
-  title: OnTime API
-  description: "API REST para la aplicación OnTime, un clon de Taiga. Esta API proporciona acceso a todas las funcionalidades implementadas en la aplicación web."
+  title: NIKE ft. ADIDAS API
+  description: "API REST de la web, un clon de Taiga. Esta API proporciona acceso a todas las funcionalidades implementadas en la aplicación web."
 servers:
-  - url: 'http://44.211.31.44:8080/api/v1'
-    description: 'Servidor de desarrollo local'
+  - url: 'https://waslab04-p1hk.onrender.com/api/v1'
+    description: 'Servidor en render'
 security:
   - ApiKeyAuth: []
 paths:
